[gd_scene load_steps=31 format=3 uid="uid://m3lqwhypj7qj"]

[ext_resource type="Texture2D" uid="uid://cg2npjwg7we2c" path="res://texture/The_Missing_textures.webp" id="1_05rtn"]
[ext_resource type="Script" path="res://scripts/fallen_level_1.gd" id="1_yjpl5"]
[ext_resource type="PackedScene" uid="uid://iog44ou6rn43" path="res://Others/player.tscn" id="2_aa6jc"]
[ext_resource type="Script" path="res://scripts/coins_counter.gd" id="3_xxr3y"]
[ext_resource type="Texture2D" uid="uid://c4qdotc4b4kh1" path="res://texture/pissmanframe1.png" id="4_263ph"]
[ext_resource type="Shader" path="res://Others/BlurGB.gdshader" id="6_uvtm8"]
[ext_resource type="Material" uid="uid://p5ibbvxbqjpd" path="res://texture/blurshader.tres" id="7_cpybv"]
[ext_resource type="Theme" uid="uid://khgpj6ruioa0" path="res://texture/Bold_text.tres" id="8_fyras"]
[ext_resource type="Theme" uid="uid://flijevvthfaj" path="res://texture/text.tres" id="9_d37yw"]
[ext_resource type="FontFile" uid="uid://cnjcheyut2dew" path="res://texture/fonts/Handjet-SemiBold.ttf" id="10_a3n24"]
[ext_resource type="Texture2D" uid="uid://bo7d3b7hpqtin" path="res://texture/just_a_cube.png" id="11_fbr0o"]
[ext_resource type="Texture2D" uid="uid://bfxo8djr5ybh6" path="res://texture/A_white_cube.png" id="12_eae1r"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3cp2j"]
shader = ExtResource("6_uvtm8")
shader_parameter/blur_amount = 3.191
shader_parameter/mix_amount = 0.079
shader_parameter/color_over = null

[sub_resource type="LabelSettings" id="LabelSettings_p3fav"]
font = ExtResource("10_a3n24")
font_size = 40

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p3ir3"]
shader = ExtResource("6_uvtm8")
shader_parameter/blur_amount = 3.014
shader_parameter/mix_amount = 0.642
shader_parameter/color_over = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_joahr"]
shader = ExtResource("6_uvtm8")
shader_parameter/blur_amount = 2.739
shader_parameter/mix_amount = 0.774
shader_parameter/color_over = Color(0.523532, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_37f14"]
font = ExtResource("10_a3n24")
font_size = 40

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rehgl"]
size = Vector2(28, 2895.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mfaan"]
size = Vector2(1927.5, 1195)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g1oxe"]
size = Vector2(3306, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7ebq"]
size = Vector2(151, 7.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y0keb"]
size = Vector2(159, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y8h8c"]
size = Vector2(22, 1.5)

[sub_resource type="Animation" id="Animation_782k0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("textbox/Panel/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("textbox/Panel/pissman:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("textbox/Panel/null_boss:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_o8td7"]
resource_name = "dialog_1"
length = 14.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("textbox/Panel/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.03333, 4.26011, 4.26667, 5.36667, 5.63333, 6.43333, 6.43685, 9.03566, 10.5, 10.5017, 13.2667, 14),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": ["", "W̴͇̋̈̒̒h̶̨̬̖͇̐͠y̷͕̪͓̾́ ̴̮̏ä̴̧́r̶̲̩̓̾͘͘e̸̼͎̝̟̺͐ ̷͙̣͕̟͔͗ŷ̶͚͚̀͠o̶̡̮̾ͅų̸̺̮̠͒̈́̄̚ͅ ̷̜̮͎̹̽́͜ḩ̷̼͇͋̎̉e̸̡̩̥̬̥̎́̑r̶̙̯̰̰̖̐ȩ̴̢̥̉͜͝ͅ?̴̦͎̤̈̈́͠", "W̴͇̋̈̒̒h̶̨̬̖͇̐͠y̷͕̪͓̾́ ̴̮̏ä̴̧́r̶̲̩̓̾͘͘e̸̼͎̝̟̺͐ ̷͙̣͕̟͔͗ŷ̶͚͚̀͠o̶̡̮̾ͅų̸̺̮̠͒̈́̄̚ͅ ̷̜̮͎̹̽́͜ḩ̷̼͇͋̎̉e̸̡̩̥̬̥̎́̑r̶̙̯̰̰̖̐ȩ̴̢̥̉͜͝ͅ?̴̦͎̤̈̈́͠ ", "", "Um idk", "Um idk", "Um idk...", "", "Ẅ̷͖͔̳́e̷̟̮̫͆͊l̵̫̯͈̗̾̄̒̈́l̵̆̾̈͜͝ ̵̨̗̋̂͝l̵̪̀̉͒̽o̸̢̢̔̈́o̸̝͂k̵̺͉͖̆̒̊̈s̷̜̪̦̿̈́̆͊ ̷͚͉̱͊l̶͉̰͍̐̈i̸͙̰̘̿̀̆͊ͅk̶̺̐͝e̸͕̪͎͌̇͐͠ ̸̲̥̏͠ͅy̶̭̏͆̇̇ǒ̸̺͕ͅư̸̜̻̙̍̋͐ ̷͔̈́̀͘w̴̡̯̜͌i̷͈̪̍͛̃͒l̸͈͙̟̯͛̊̊̐l̷̨͗̑̔ ̸̡͎̅n̵͉̰̫̻̆̿̋͐ó̴̥͔͔͉͛͝w̶̰̗͓͝ ̶̞̎͐̄͠D̷̲̈́̇Ỉ̷̧̏͝͝Ë̴̯̗̘̹͝!̵̡̢̩̫̽̑̾͝", "Ẅ̷͖͔̳́e̷̟̮̫͆͊l̵̫̯͈̗̾̄̒̈́l̵̆̾̈͜͝ ̵̨̗̋̂͝l̵̪̀̉͒̽o̸̢̢̔̈́o̸̝͂k̵̺͉͖̆̒̊̈s̷̜̪̦̿̈́̆͊ ̷͚͉̱͊l̶͉̰͍̐̈i̸͙̰̘̿̀̆͊ͅk̶̺̐͝e̸͕̪͎͌̇͐͠ ̸̲̥̏͠ͅy̶̭̏͆̇̇ǒ̸̺͕ͅư̸̜̻̙̍̋͐ ̷͔̈́̀͘w̴̡̯̜͌i̷͈̪̍͛̃͒l̸͈͙̟̯͛̊̊̐l̷̨͗̑̔ ̸̡͎̅n̵͉̰̫̻̆̿̋͐ó̴̥͔͔͉͛͝w̶̰̗͓͝ ̶̞̎͐̄͠D̷̲̈́̇Ỉ̷̧̏͝͝Ë̴̯̗̘̹͝!̵̡̢̩̫̽̑̾͝", "", "Should have guessed...", "Should have guessed..."]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("textbox/Panel/pissman:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.26667, 6.43333, 10.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("textbox/Panel/null_boss:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4.26667, 6.43333, 10.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ak4ue"]
_data = {
&"RESET": SubResource("Animation_782k0"),
&"dialog_1": SubResource("Animation_o8td7")
}

[sub_resource type="Animation" id="Animation_85qsr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("textbox/screen_fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_tiwge"]
resource_name = "fade"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("textbox/screen_fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j823r"]
_data = {
&"fade": SubResource("Animation_tiwge"),
&"RESET": SubResource("Animation_85qsr")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gvhvm"]

[node name="FallenLevel1" type="Node2D"]
script = ExtResource("1_yjpl5")

[node name="bg" type="TextureRect" parent="."]
modulate = Color(0.57098, 0.57098, 0.57098, 1)
z_index = -1
texture_filter = 1
texture_repeat = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -718.0
offset_top = -3272.0
offset_right = 13824.0
offset_bottom = 7076.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_05rtn")
expand_mode = 1
stretch_mode = 1

[node name="player2d" parent="." instance=ExtResource("2_aa6jc")]
z_index = 10
position = Vector2(15, -1115)

[node name="textbox" type="CanvasLayer" parent="."]

[node name="coins_collector" type="Label" parent="textbox"]
offset_right = 60.0
offset_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Coins = "
script = ExtResource("3_xxr3y")

[node name="Panel" type="Panel" parent="textbox"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -218.0
offset_top = 23.0
offset_right = 219.0
offset_bottom = 133.0
grow_horizontal = 2

[node name="pissman" type="TextureRect" parent="textbox/Panel"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 361.0
offset_top = -68.0
offset_right = 542.0
offset_bottom = 98.0
texture = ExtResource("4_263ph")

[node name="Label" type="Label" parent="textbox/Panel/pissman"]
texture_filter = 2
layout_mode = 0
offset_left = -356.0
offset_top = 69.0
offset_right = -283.0
offset_bottom = 92.0
text = "Piss Man:"

[node name="Label" type="Label" parent="textbox/Panel"]
layout_mode = 0
offset_left = 87.0
offset_top = 4.0
offset_right = 414.0
offset_bottom = 131.0

[node name="null_boss" type="Sprite2D" parent="textbox/Panel"]
texture_filter = 1
position = Vector2(403, 36)
scale = Vector2(0.05, 0.05)
texture = ExtResource("1_05rtn")

[node name="Label" type="Label" parent="textbox/Panel/null_boss"]
texture_filter = 2
offset_left = -7920.0
offset_top = -660.0
offset_right = -7833.0
offset_bottom = -637.0
scale = Vector2(17.5, 17.5)
text = "NULL:"

[node name="level_done" type="Control" parent="textbox"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="textbox/level_done"]
material = SubResource("ShaderMaterial_3cp2j")
layout_mode = 0
offset_left = -663.0
offset_top = -389.0
offset_right = 792.0
offset_bottom = 417.0

[node name="ColorRect" type="ColorRect" parent="textbox/level_done"]
material = ExtResource("7_cpybv")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -73.0
offset_right = 118.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_fyras")

[node name="Label" type="Label" parent="textbox/level_done"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -64.0
offset_right = 48.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_fyras")
text = "Level Done!"
horizontal_alignment = 1

[node name="Button" type="Button" parent="textbox/level_done"]
texture_filter = 1
layout_mode = 0
offset_left = -2.0
offset_top = 54.0
offset_right = 43.0
offset_bottom = 85.0
theme = ExtResource("9_d37yw")
text = "Next"

[node name="pause_menu" type="Control" parent="textbox"]
visible = false
z_index = 1
z_as_relative = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -32.0
offset_right = 52.5
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="textbox/pause_menu"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -1.318
anchor_right = 0.5
anchor_bottom = -1.318
offset_left = -77.0
offset_top = -31.648
offset_right = 77.0
offset_bottom = 14.352
grow_horizontal = 2
grow_vertical = 2
text = "Paused"
label_settings = SubResource("LabelSettings_p3fav")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="textbox/pause_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -33.0
offset_right = 48.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="textbox/pause_menu/MarginContainer"]
layout_mode = 2

[node name="exit" type="Button" parent="textbox/pause_menu/MarginContainer/VBoxContainer"]
z_index = 10
layout_mode = 2
theme = ExtResource("9_d37yw")
text = "Main Menu"

[node name="resume" type="Button" parent="textbox/pause_menu/MarginContainer/VBoxContainer"]
z_index = 10
layout_mode = 2
theme = ExtResource("9_d37yw")
text = "CONTINE"

[node name="bg" type="TextureRect" parent="textbox/pause_menu"]
z_index = -1
material = ExtResource("7_cpybv")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -671.5
offset_top = -378.0
offset_right = 671.5
offset_bottom = 454.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("11_fbr0o")

[node name="bg2" type="TextureRect" parent="textbox/pause_menu"]
z_index = -1
material = SubResource("ShaderMaterial_p3ir3")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.5
offset_top = -405.0
offset_right = 97.5
offset_bottom = 440.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("11_fbr0o")

[node name="death_screen" type="Control" parent="textbox"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="textbox/death_screen"]
material = SubResource("ShaderMaterial_joahr")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -624.5
offset_top = -360.5
offset_right = 624.5
offset_bottom = 360.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_eae1r")

[node name="BoxContainer" type="BoxContainer" parent="textbox/death_screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.5
offset_top = -42.5
offset_right = 103.5
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2
vertical = true

[node name="Label" type="Label" parent="textbox/death_screen/BoxContainer"]
texture_filter = 1
layout_mode = 2
text = "You Might have Died!"
label_settings = SubResource("LabelSettings_37f14")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="textbox/death_screen/BoxContainer"]
layout_mode = 2
text = "Player = NULL 
Player does not exist"
horizontal_alignment = 1

[node name="respawn_button" type="Button" parent="textbox/death_screen/BoxContainer"]
layout_mode = 2
text = "Respawn"

[node name="screen_fade" type="TextureRect" parent="textbox"]
modulate = Color(0, 0, 0, 0)
offset_left = -21.0
offset_top = -16.0
offset_right = 1313.0
offset_bottom = 875.0
texture = ExtResource("12_eae1r")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-13, -2879)
offset = Vector2(0, -50)
zoom = Vector2(2, 2)
position_smoothing_enabled = true

[node name="wall" type="Node2D" parent="."]

[node name="mainwalls" type="StaticBody2D" parent="wall"]

[node name="TextureRect2" type="TextureRect" parent="wall/mainwalls"]
texture_filter = 1
offset_left = 179.0
offset_top = -3138.0
offset_right = 64312.0
offset_bottom = 100995.0
scale = Vector2(0.03, 0.03)
texture = ExtResource("1_05rtn")
stretch_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall/mainwalls"]
position = Vector2(-275, -1176.5)
shape = SubResource("RectangleShape2D_rehgl")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="wall/mainwalls"]
position = Vector2(1142.25, -611.5)
shape = SubResource("RectangleShape2D_mfaan")

[node name="TextureRect" type="TextureRect" parent="wall/mainwalls"]
texture_filter = 1
offset_left = -700.0
offset_top = -3137.0
offset_right = 13924.0
offset_bottom = 105954.0
scale = Vector2(0.03, 0.03)
texture = ExtResource("1_05rtn")
stretch_mode = 1

[node name="wallsthing" type="StaticBody2D" parent="wall"]
position = Vector2(4960, 11)

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall/wallsthing"]
position = Vector2(-1936, -1268)
shape = SubResource("RectangleShape2D_rehgl")

[node name="TextureRect" type="TextureRect" parent="wall/wallsthing"]
texture_filter = 1
offset_left = -1946.0
offset_top = -3099.0
offset_right = 12678.0
offset_bottom = 105992.0
scale = Vector2(0.03, 0.03)
texture = ExtResource("1_05rtn")
stretch_mode = 1

[node name="floor" type="StaticBody2D" parent="wall"]
position = Vector2(-255, 137)

[node name="TextureRect" type="TextureRect" parent="wall/floor"]
texture_filter = 1
offset_left = -441.0
offset_top = -10.0
offset_right = 138559.0
offset_bottom = 9057.0
scale = Vector2(0.03, 0.03)
texture = ExtResource("1_05rtn")
expand_mode = 1
stretch_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall/floor"]
position = Vector2(1643, 0)
shape = SubResource("RectangleShape2D_g1oxe")

[node name="null" type="TextureRect" parent="."]
offset_left = 2724.0
offset_top = -50.0
offset_right = 2972.0
offset_bottom = 205.0
scale = Vector2(0.65, 0.65)
texture = ExtResource("1_05rtn")
expand_mode = 1
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="null"]
modulate = Color(0.568627, 0.00392157, 0.498039, 1)
z_index = -1
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 386.0
offset_bottom = 396.0
scale = Vector2(0.65, 0.65)
texture = ExtResource("12_eae1r")
expand_mode = 1
stretch_mode = 1

[node name="playerstoper" type="StaticBody2D" parent="."]
position = Vector2(2573, 80)

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerstoper"]
position = Vector2(39, -28)
rotation = 1.5708
shape = SubResource("RectangleShape2D_w7ebq")
one_way_collision = true
debug_color = Color(0.731244, 0.472529, 1.92523e-07, 0.42)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="playerstoper"]
position = Vector2(70, -28.5)
rotation = 1.5708
shape = SubResource("RectangleShape2D_y0keb")
debug_color = Color(0.731244, 0.472529, 1.92523e-07, 0.42)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="playerstoper"]
position = Vector2(56, 5)
rotation = -3.14159
shape = SubResource("RectangleShape2D_y8h8c")
one_way_collision = true
debug_color = Color(0.731244, 0.472529, 1.92523e-07, 0.42)

[node name="script" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ak4ue")
}

[node name="screen_fade_thing" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_j823r")
}

[node name="trigger" type="Area2D" parent="."]
position = Vector2(2628, 99)

[node name="CollisionShape2D" type="CollisionShape2D" parent="trigger"]
shape = SubResource("RectangleShape2D_gvhvm")

[connection signal="body_shape_entered" from="trigger" to="." method="_on_trigger_body_shape_entered"]
